tests/invalid/let_without_initializer.wio
fn Entry(args: string[]) -> i32 {
    let value: i32;
    return 0;
}
